src/test/ui/issues/issue-16939.stderr
error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/issue-16939.rs:5:9
   |
LL |     |t| f(t);
   |         ^ - supplied 1 argument
   |         |
   |         expected 0 arguments
   |
note: associated function defined here
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
LL |     extern "dust-call" fn call(&self, args: Args) -> Self::Output;
   |                           ^^^^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0057`.
